[package]
name = "lsp_msg_derive"
version = "0.1.0"
authors = ["Justin Simerly <justinsimerly1992@gmail.com>"]
edition = "2018"
description = "Proc macros for lsp_msg"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4.27"
quote = "0.6.12"
syn = { version = "0.15.30", features = ["full"] }
