[package]
name = "lsp_msg_derive"
version = "0.1.0"
authors = ["Justin Simerly <justinsimerly1992@gmail.com>"]
edition = "2018"
description = "Proc macros for lsp_msg"
license = "MIT"
repository = "https://github.com/jsim2010/lsp_msg_derive"
keywords = ["lsp", "lsp_msg"]
categories = ["data-structures"]
readme = "README.md"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "0.4.27"
quote = "0.6.12"
syn = { version = "0.15.30", features = ["full"] }

[package.metadata.commands]
preeval = """
(cargo readme -V || cargo install cargo-readme) \
&& cargo readme > r\
"""
# Evaluates source code for issues.

# Clippy command forbids all rustc and clippy lints except the following:
# -D unused-qualifications: #[derive(Default)] adds an allow.
# -A missing-docs: Unknown errors found due to missing documentation for a module and a static; this may be due to being a proc-macro?
# -A clippy::implicit-return: This goes against rust convention and would require return calls in inconvenient places (e.g. closures).
eval = """
set CLIPPY_DISABLE_DOCS_LINKS=1\
&& cargo clippy -- \
    -F warnings \
    -F rust-2018-idioms \
    -F future-incompatible \
    -F unused \
    -F macro-use-extern-crate \
    -F missing-copy-implementations \
    -F missing-debug-implementations \
    -F single-use-lifetimes \
    -F trivial-casts \
    -F trivial-numeric-casts \
    -F unreachable-pub \
    -F unused-import-braces \
    -F unused-lifetimes \
    -F unused-results \
    -F clippy::all \
    -F clippy::pedantic \
    -F clippy::nursery \
    -F clippy::cargo \
    -F clippy::clone-on-ref-ptr \
    -F clippy::dbg-macro \
    -F clippy::decimal-literal-representation \
    -F clippy::else-if-without-else \
    -F clippy::float-arithmetic \
    -F clippy::float-cmp-const \
    -F clippy::get-unwrap \
    -F clippy::indexing-slicing \
    -F clippy::integer-arithmetic \
    -F clippy::mem-forget \
    -F clippy::missing-docs-in-private-items \
    -F clippy::missing-inline-in-public-items \
    -F clippy::multiple-inherent-impl \
    -F clippy::option-unwrap-used \
    -F clippy::print-stdout \
    -F clippy::result-unwrap-used \
    -F clippy::shadow-reuse \
    -F clippy::shadow-same \
    -F clippy::string-add \
    -F clippy::unimplemented \
    -F clippy::use-debug \
    -F clippy::wildcard-enum-match-arm \
    -F clippy::wrong-pub-self-convention \
    -D unused-qualifications \
    -A missing-docs \
    -A clippy::implicit-return \
&& cargo fmt -- --check \
&& fc r README.md \
&& cargo test --verbose --all-features\
"""
posteval = "if exist r rm r"

# Fixes all issues that can be done automatically.
fix = "cargo fmt && cargo readme > README.md"
